--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "EXT-Selfies",
   "version": "1.0.0",
+  "rev": "221030",
   "description": "take selfies from webcam",
   "main": "EXT-Selfies.js",
   "scripts": {
@@ -22,7 +23,6 @@
   },
   "homepage": "https://wiki.bugsounet.fr",
   "dependencies": {
-    "node-webcam": "^0.5.0",
-    "nodemailer": "^6.4.4"
+    "node-webcam": "^0.5.0"
   }
 }
