--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "EXT-Selfies",
   "version": "1.0.0",
-  "rev": "221030",
+  "rev": "221105",
   "description": "take selfies from webcam",
   "main": "EXT-Selfies.js",
   "scripts": {
@@ -15,7 +15,9 @@
   },
   "authors": [
     "eouia0819@gmail.com",
-    "bugsounet"
+    "BrianHepler",
+    "bugsounet",
+    "Venditti-Alex"
   ],
   "license": "MIT",
   "bugs": {
