--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://wiki.bugsounet.fr",
   "dependencies": {
-    "node-webcam": "^0.8.1"
+    "node-webcam": "^0.8.1",
+    "python-shell": "^3.0.1"
   }
 }
