--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "EXT-Selfies",
-  "version": "1.0.0",
-  "rev": "221114",
+  "version": "1.0.0-dev",
+  "rev": "221116",
   "description": "take selfies from webcam",
   "main": "EXT-Selfies.js",
   "scripts": {
