--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "EXT-Selfies",
-  "version": "1.0.1",
-  "rev": "230312",
+  "version": "1.1.0",
+  "rev": "230326",
   "description": "take selfies from webcam",
   "main": "EXT-Selfies.js",
   "scripts": {
     "preinstall": "installer/preinstall.sh",
     "postinstall": "installer/postinstall.sh",
-    "update": "installer/update.sh"
+    "update": "installer/update.sh",
+    "reset": "git reset --hard",
+    "clean": "rm -rf node_modules package-lock.json"
   },
   "repository": {
     "type": "git",
@@ -26,6 +28,9 @@
   "homepage": "https://wiki.bugsounet.fr",
   "dependencies": {
     "ba64": "^3.0.9",
+    "check-node-version": "^4.2.1",
+    "glob": "^9.3.2",
+    "minify": "^9.2.0",
     "node-webcam": "^0.8.1"
   }
 }
