--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "EXT-Selfies",
-  "version": "1.3.0",
-  "rev": "240103",
+  "version": "1.4.0",
+  "rev": "240308",
   "description": "take selfies from webcam",
   "main": "EXT-Selfies.js",
   "scripts": {
@@ -9,8 +9,18 @@
     "postinstall": "installer/postinstall.sh -m -b",
     "update": "installer/update.sh",
     "reset": "git reset --hard",
-    "clean": "rm -rf node_modules package-lock.json"
+    "clean": "rm -rf node_modules package-lock.json",
+    "lint": "eslint *.js installer/*.js --config eslint.config.js",
+    "lint:fix": "eslint *.js installer/*.js --config eslint.config.js --fix",
+    "test": "npm run lint",
+    "test:minify": "cd installer && node minify.js"
   },
+  "keywords": [
+    "MMM-GoogleAssistant",
+    "magic mirror",
+    "module",
+    "selfies"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bugsounet/EXT-Selfies"
@@ -31,5 +41,11 @@
     "esbuild": "^0.20.1",
     "glob": "^10.3.10",
     "node-webcam": "^0.8.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^8.57.0",
+    "@stylistic/eslint-plugin": "^1.6.3",
+    "eslint": "^8.57.0",
+    "eslint-plugin-import": "^2.29.1"
   }
 }
